--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mapbox/mapbox-gl-draw": "^1.1.2",
     "@material-tailwind/react": "^0.3.4",
     "@testing-library/jest-dom": "^5.11.4",
